--- a/trading-main.html
+++ b/trading-main.html
@@ -21,6 +21,23 @@
   <link href="MDtables/css/addons/datatables-select.min.css" rel="stylesheet">
   <!--Moment JS-->
   <script src="assets/js/moment.js"></script>
+  <!-- jQuery -->
+  <script type="text/javascript" src="MDtables/js/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="MDtables/js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="MDtables/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="MDtables/js/mdb.min.js"></script>
+  <!-- Your custom scripts (optional) -->
+  <script type="text/javascript"></script>
+  <!-- MDBootstrap Datatables  -->
+  <script type="text/javascript" src="MDtables/js/addons/datatables.min.js"></script>
+  <script type="text/javascript" src="MDtables/js/addons/datatables-select.min.js"></script>
+  <!-- JQuery confirm -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+
 </head>
 <body>
 
@@ -93,19 +110,6 @@
  
   <!-- End your project here-->
 
-  <!-- jQuery -->
-  <script type="text/javascript" src="MDtables/js/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="MDtables/js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="MDtables/js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="MDtables/js/mdb.min.js"></script>
-  <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
-  <!-- MDBootstrap Datatables  -->
-  <script type="text/javascript" src="MDtables/js/addons/datatables.min.js"></script>
-  <script type="text/javascript" src="MDtables/js/addons/datatables-select.min.js"></script>
 
   <script>
       $(document).ready(function () {
