disabling buttons when not selecting strategy

--- a/getstocks.html
+++ b/getstocks.html
@@ -118,7 +118,7 @@
       });
   </script>
 
-  <script src="assets/js/trading-main.js"></script>
+  <script src="assets/js/loadstocks.js"></script>
 
 </body>
 </html>
