--- a/trading-main.html
+++ b/trading-main.html
@@ -53,24 +53,24 @@
           <div class="row mt-3 mb-0">
               <div class="col-sm-1"></div>  <!--formating purposes-->
               <div class="col-sm-10 my-1">
-                  <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-0 mb-3 d-flex justify-content-between align-items-center">
+                  <div class="view view-cascade kgradient-card-header kblue-gradient indigo darken-4 narrower py-2 mx-0 mb-3 d-flex justify-content-between align-items-center">
                       <div>
                           <button id="addStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                                <i class="fas fa-plus-square mt-0"></i>
+                                <i class="fas fa-2x fa-plus-square mt-0"></i>
                           </button>
-                          <button id="editStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                                <i class="fas fa-pencil-alt mt-0"></i>
+                          <button id="editStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2" disabled>
+                                <i id="edt-str-fnt" class="fas fa-pencil-alt mt-0"></i>
                           </button>
-                          <button id="deleteStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                            <i class="far fa-trash-alt mt-0"></i>
+                          <button id="deleteStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2" disabled>
+                            <i id="dlt-str-fnt" class="far fa-trash-alt mt-0"></i>
                           </button>
                   </div>
                   
                       <a href="" class="white-text mx-3">Trading console - Available strategies</a>
                   
                       <div>
-                          <button id="runStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                            <i class="fas fa-fighter-jet"></i>
+                          <button id="runStrategy" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2" disabled>
+                            <i id="run-str-fnt" class="fas fa-fighter-jet"></i>
                           </button>
                       </div>
                   </div>
