--- a/trading-main.html
+++ b/trading-main.html
@@ -37,6 +37,8 @@
   <!-- JQuery confirm -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+  <!--styling this screen-->
+  <link rel="stylesheet" href="assets/css/trading_main_style.css">
 
 </head>
 <body>
@@ -44,7 +46,7 @@
   <!-- Start your project here-->  
  
  
-    <div class="container">  <!-- Container to wrap the entire screen-->
+    <div class="container main-wrapper">  <!-- Container to wrap the entire screen-->
 
           <!--********************************************************************-->
           <!--First row contains the heading / information about this page        -->
