--- a/trading-main-add.html
+++ b/trading-main-add.html
@@ -56,7 +56,7 @@
                 <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-0 mb-3 d-flex justify-content-between align-items-center">
                     <div>
                       <button id="back" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                        <i class="fas fa-arrow-circle-left"></i>
+                        <i class="fas fa-2x fa-arrow-circle-left"></i>
                       </button>
                     </div>
               
@@ -64,7 +64,7 @@
                       
                       <div>
                         <button id="add-stg" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
-                          <i class="fas fa-plus-square mt-0"></i>
+                          <i class="fas fa-2x fa-plus-square mt-0"></i>
                         </button>
                       </div>
                 </div>
