--- a/trading-main-edit.html
+++ b/trading-main-edit.html
@@ -63,7 +63,7 @@
                       <a href="" class="white-text mx-3">Editing a trading strategy</a>
                       
                       <div>
-                        <button id="add-stg" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
+                        <button id="edit-stg" type="button" class="btn btn-outline-white btn-rounded btn-sm px-2">
                           <i class="fas fa-save"></i>
                         </button>
                       </div>
@@ -86,7 +86,7 @@
                                 <div class="input-group-prepend">
                                       <span class="input-group-text" id="strat-name-text">Edit strategy name (max 10 characters) </span>
                                 </div>
-                                <input id="strat-name" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="strat-name-text">
+                                <input type="text" id="strat-name"  class="form-control">
                         </div>
 
                         <div class="input-group mb-3">  <!-- Strategy description-->
@@ -248,7 +248,7 @@
 
  
 
-  <script src="assets/js/edit-main-add.js"></script>
+  <script src="assets/js/trading-main-edit.js"></script>
 
 
 </body>
