--- a/details.html
+++ b/details.html
@@ -36,20 +36,20 @@
   <!-- MDBootstrap Datatables  -->
   <script type="text/javascript" src="MDtables/js/addons/datatables.min.js"></script>
   <script type="text/javascript" src="MDtables/js/addons/datatables-select.min.js"></script>  
-  <!-- JQuery confirm -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
   <!--JQuery UI-->
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
   <!--Amcharts-->
   <link rel="stylesheet" href="amcharts/amcharts/style.css" type="text/css">
   <script src="amcharts/amcharts/amcharts.js" type="text/javascript"></script>
   <script src="amcharts/amcharts/serial.js" type="text/javascript"></script>
   <script src="amcharts/amcharts/amstock.js" type="text/javascript"></script>
+  <!-- JQuery confirm -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 </head>
+
 
 <body>
     <!--*************************************************************-->
@@ -73,7 +73,7 @@
                        </button>
                      </div>
                
-                       <a href="" class="white-text mx-3">Stock details</a>
+                       <a href="" id="det-title" class="white-text mx-3">Stock details</a>
                        
                        <div>   <!--don't delete, needed for formatting-->
                        </div>  <!--don't delete, needed for formatting-->
@@ -97,9 +97,10 @@
                <div class="col-sm-10" id="tabs">
                     <!-- <div id="tabs"> -->
                          <ul>
-                              <li><a href="#fragment-1"><span>Graph Information</span></a></li>
-                              <li><a href="#fragment-2"><span>News</span></a></li>
-                              <li><a href="#fragment-3"><span>Trade</span></a></li>
+                              <li><a href="#fragment-1"><span>Intraday stock price</span></a></li>
+                              <li><a href="#fragment-2"><span>Historical stock price</span></a></li>
+                              <li><a href="#fragment-3"><span>News</span></a></li>
+                              <li><a href="#fragment-4"><span>Trade</span></a></li>
                          </ul>
 
                          <div id="fragment-1">
@@ -118,6 +119,10 @@
                                </div>
                          </div> <!-- end of fragment-2-->
                          <div id="fragment-3">
+
+                         </div>  <!--end of fragment 3-->
+
+                         <div id="fragment-4">
 
                          </div>  <!--end of fragment 3-->
 
