Fixes header width not same with data width

--- a/details.html
+++ b/details.html
@@ -180,8 +180,7 @@
                                              </label>
                                         </div>
                                         <div class="col-sm-1"> </div>  <!--formatting only-->
-                                   </div>  <!-- button group-->
-                              </div>  <!-- end of first row-->
+                                   </div>  <!-- button group-->                              </div>  <!--end of first row-->
                               <div class="row">
                                    <div class="col-sm"></div>  <!--for formatting purposes only-->
                                    <div class="col-sm-8">
@@ -210,6 +209,5 @@
 <script>$( "#tabs" ).tabs()</script>
 <script src="assets/js/details.js"></script>
 
-     
 </body>
 </html>
